# rengine-wasm

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  TO_IMPROVE.md  docker-compose.yml  publish.sh  rust-toolchain.toml  rustfmt.toml
.github/workflows/: build.yml  ci.yml
config/: test_anvil.toml
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/api/static/: index.html
crates/binance-perp/: Cargo.toml
crates/binance-perp/src/: config.rs  lib.rs
crates/binance-perp/src/execution/: mod.rs  types.rs
crates/binance-perp/src/private/: handlers.rs  http.rs  mod.rs  types.rs
crates/binance-perp/src/public/: http.rs  mod.rs  types.rs  ws.rs
crates/binance-spot/: Cargo.toml
crates/binance-spot/src/: config.rs  lib.rs
crates/binance-spot/src/execution/: mod.rs  types.rs
crates/binance-spot/src/private/: http.rs  mod.rs  types.rs
crates/binance-spot/src/public/: http.rs  mod.rs  types.rs  ws.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: engine.rs  execution_exchanges.rs  lib.rs  reader_exchanges.rs  strategies.rs  trades_exposures.rs  transformers.rs
crates/db/: Cargo.toml
crates/db/clickhouse_migrations/: 0001_top_book.sql  0002_balance.sql  0003_trade.sql  0004_position.sql  0005_exposure.sql  0006_indicator.sql  0007_strategy_log.sql  0008_latency.sql  0009_transformer_log.sql  0010_public_trade.sql  0011_evm_tx.sql  0012_optimize_top_book.sql  0013_optimize_balance.sql  0014_optimize_trade.sql  0015_optimize_position.sql  0016_optimize_exposure.sql  0017_optimize_indicator.sql  0018_optimize_strategy_log.sql  0019_optimize_latency.sql  0020_optimize_transformer_log.sql  0021_optimize_public_trade.sql  0022_counter_metric.sql  0023_storage.sql
crates/db/src/: clickhouse.rs  lib.rs  migrate.rs
crates/db/src/duckdb/: evm_logs.rs  mod.rs  multicalls.rs  strategies.rs  trades.rs  transformers.rs  utils.rs
crates/evm/: Cargo.toml
crates/evm/src/: executor.rs  lib.rs  logs.rs  test_utils.rs  types.rs  ws.rs
crates/evm_logs_api/: Cargo.toml  evm_logs.wit
crates/evm_logs_api/src/: lib.rs
crates/evm_multicall_api/: Cargo.toml  multicall.wit
crates/evm_multicall_api/src/: lib.rs
crates/evm_types/: Cargo.toml
crates/evm_types/src/: erc20.rs  lib.rs
crates/frunk_ws/: Cargo.toml
crates/frunk_ws/examples/: complex_example.rs  hyperliquid_example.rs  simple_example.rs
crates/frunk_ws/src/: engine.rs  handler.rs  lib.rs  types.rs
crates/frunk_ws/src/handlers/: forwarder.rs  heartbeat.rs  logging.rs  mod.rs  ping_pong.rs
crates/frunk_ws/src/on_connect/: subscription.rs
crates/hyperliquid/: Cargo.toml
crates/hyperliquid/src/: assets.rs  execution.rs  http.rs  hyperliquid.rs  lib.rs  types.rs  ws.rs
crates/hyperliquid/src/private/: http.rs  mod.rs  ws.rs
crates/hyperliquid/src/public/: http.rs  mod.rs  ws.rs
crates/interfaces/: Cargo.toml
crates/interfaces/src/: db.rs  lib.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs  tools.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: counters.rs  latencies.rs  lib.rs  test_compile.rs
crates/non_wasm_types/: Cargo.toml
crates/non_wasm_types/src/: lib.rs
crates/strategy_api/: Cargo.toml  strategy.wit
crates/strategy_api/src/: lib.rs  orderbook.rs
crates/types/: Cargo.toml
crates/types/src/: book.rs  config.rs  db.rs  evm.rs  execution.rs  identifiers.rs  keys.rs  lib.rs  order.rs  primitive.rs  serialization.rs  state.rs  trade.rs
crates/utils/: Cargo.toml
crates/utils/src/: http.rs  lib.rs
crates/wasm-runtime/: Cargo.toml
crates/wasm-runtime/src/: evm_logs.rs  lib.rs  multicall.rs  runtime.rs  strategy.rs  types.rs
crates/wasm-runtime/src/tests/: farb.rs  mod.rs
docs/: mcp.md
evm_logs/test_logs/: Cargo.toml
evm_logs/test_logs/src/: lib.rs
evm_multicalls/balance_arbitrum_multicall/: Cargo.toml
evm_multicalls/balance_arbitrum_multicall/src/: lib.rs
evm_multicalls/evm_integration_test/: Cargo.toml
evm_multicalls/evm_integration_test/src/: lib.rs
evm_multicalls/test_multicall/: Cargo.toml
evm_multicalls/test_multicall/src/: lib.rs
scripts/: deploy_anvil.sh  logs.sh  mock_erc20.hex  multicall.sh  multicall3.hex  strategies.sh  transformers.sh
services/wasm-builder/: Cargo.toml  Dockerfile  docker-compose.yml
services/wasm-builder/src/: build.rs  cargo_gen.rs  check.rs  main.rs  routes.rs
strategies/client_order_id_strategy/: Cargo.toml
strategies/client_order_id_strategy/src/: lib.rs
strategies/evm_strategy_integration_test/: Cargo.toml
strategies/evm_strategy_integration_test/src/: lib.rs
strategies/farb/: Cargo.toml
strategies/farb/src/: lib.rs
strategies/one_ask_one_bid_with_spread/: Cargo.toml
strategies/one_ask_one_bid_with_spread/src/: lib.rs
strategies/simple_strategy/: Cargo.toml
strategies/simple_strategy/src/: lib.rs
strategies/test_strategy_evm/: Cargo.toml
strategies/test_strategy_evm/src/: lib.rs
strategies/test_strategy_state/: Cargo.toml
strategies/test_strategy_state/src/: lib.rs
transformers/basis_features/: Cargo.toml
transformers/basis_features/src/: lib.rs
transformers/ema_price/: Cargo.toml
transformers/ema_price/src/: lib.rs
transformers/ema_volume/: Cargo.toml
transformers/ema_volume/src/: lib.rs
transformers/flow_toxicity/: Cargo.toml
transformers/flow_toxicity/src/: lib.rs
transformers/market_features/: Cargo.toml
transformers/market_features/src/: lib.rs
transformers/market_features_ema/: Cargo.toml  metrics.py
transformers/market_features_ema/src/: lib.rs
transformers/market_features_types/: Cargo.toml
transformers/market_features_types/src/: lib.rs
transformers/momentum_regime/: Cargo.toml
transformers/momentum_regime/src/: lib.rs
