[workspace]
members = [
  "crates/*",
  "strategies/*",
  "evm_multicalls/*",
  "evm_logs/*",
  "transformers/*",
  "bin/*",
]
exclude = ["crates/binance_perp_example", "services/wasm-builder"]
default-members = ["crates/*", "bin/*"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.88"
authors = ["Louis AMAS"]

[workspace.lints]
# rust.missing-debug-implementations = "warn"
# rust.missing-docs = "warn"
rust.unreachable-pub = "warn"
rust.unused-must-use = "deny"
rust.rust-2018-idioms = "deny"
rustdoc.all = "warn"

[workspace.lints.clippy]
# These are some of clippy's nursery (i.e., experimental) lints that we like.
# By default, nursery lints are allowed. Some of the lints below have made good
# suggestions which we fixed. The others didn't have any findings, so we can
# assume they don't have that many false positives. Let's enable them to
# prevent future problems.
borrow_as_ptr = "warn"
branches_sharing_code = "warn"
clear_with_drain = "warn"
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
derive_partial_eq_without_eq = "warn"
doc_markdown = "warn"
empty_line_after_doc_comments = "warn"
empty_line_after_outer_attr = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
from_iter_instead_of_collect = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
iter_with_drain = "warn"
iter_without_into_iter = "warn"
large_stack_frames = "warn"
manual_assert = "warn"
manual_clamp = "warn"
manual_is_variant_and = "warn"
manual_string_new = "warn"
match_same_arms = "warn"
missing_const_for_fn = "warn"
mutex_integer = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_ref_mut = "warn"
nonstandard_macro_braces = "warn"
option_as_ref_cloned = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
redundant_clone = "warn"
redundant_else = "warn"
single_char_pattern = "warn"
string_lit_as_bytes = "warn"
string_lit_chars_any = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
tuple_array_conversions = "warn"
type_repetition_in_bounds = "warn"
uninhabited_references = "warn"
unnecessary_self_imports = "warn"
unnecessary_struct_initialization = "warn"
unnested_or_patterns = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
use_self = "warn"
useless_let_if_seq = "warn"
while_float = "warn"
zero_sized_map_values = "warn"
absolute_paths = "warn"

# These are nursery lints which have findings. Allow them for now. Some are not
# quite mature enough for use in our codebase and some we don't really want.
# Explicitly listing should make it easier to fix in the future.
as_ptr_cast_mut = "allow"
cognitive_complexity = "allow"
debug_assert_with_mut_call = "allow"
fallible_impl_from = "allow"
future_not_send = "allow"
needless_collect = "allow"
non_send_fields_in_send_ty = "allow"
redundant_pub_crate = "allow"
significant_drop_in_scrutinee = "allow"
significant_drop_tightening = "allow"
too_long_first_doc_paragraph = "allow"

[workspace.dependencies]
evm = { path = "crates/evm" }
evm-multicall-api = { path = "crates/evm_multicall_api" }
evm-logs-api = { path = "crates/evm_logs_api" }
evm-types = { path = "crates/evm_types" }
farb = { path = "strategies/farb" }
frunk_ws = { path = "crates/frunk_ws" }
hyperliquid = { path = "crates/hyperliquid" }
binance-spot = { path = "crates/binance-spot" }
binance-perp = { path = "crates/binance-perp" }
rengine-api = { path = "crates/api" }
rengine-config = { path = "crates/config" }
rengine-core = { path = "crates/core" }
rengine-db = { path = "crates/db" }
rengine-interfaces = { path = "crates/interfaces" }
rengine-macros = { path = "crates/macros" }
rengine-metrics = { path = "crates/metrics" }
rengine-non-wasm-types = { path = "crates/non_wasm_types" }
rengine-types = { path = "crates/types" }
rengine-utils = { path = "crates/utils" }
simple-strategy = { path = "strategies/simple_strategy" }
strategy-api = { path = "crates/strategy_api" }
wasm-runtime = { path = "crates/wasm-runtime" }

alloy = { version = "1.0.9", features = ["eip712"], default-features = false }
async-trait = "0.1.88"
anyhow = "1.0.89"
mockall = "0.13.1"
axum = { version = "0.8.4", features = ["macros"] }
base64 = "0.22.1"
borsh = { version = "1.5.7", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
clickhouse = "0.14.0"
const-hex = "1.14.1"
once_cell = "1.21.3"
duckdb = { version = "1.3.2", features = ["bundled"] }
futures = "0.3.31"
futures-util = "0.3.30"
frunk = "0.4.4"
hex = "0.4.3"
humantime = "2.2.0"
parking_lot = "0.12.4"
phf = { version = "0.11.3", features = ["macros"] }
proc-macro2 = "1"
quote = "1"
reqwest = { version = "0.12.7", features = ["json", "native-tls"] }
rust_decimal = { version = "1.36.0", features = [
  "borsh",
  "serde-str",
  "maths",
  "c-repr",
] }
rust_decimal_macros = "1.36"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_urlencoded = "0.7.1"
serde_yaml = "0.9.34"
smol_str = { version = "0.3.4", features = ["serde"] }
scc = { version = "2.2.2", features = ["serde"] }
syn = { version = "2", features = ["full", "visit"] }
strum = { version = "0.27.2", features = ["derive"] }
wit-bindgen = "0.42.1"
testcontainers = "0.24.0"
thiserror = "2.0.12"
tokio = { version = "1", features = [
  "rt-multi-thread",
  "test-util",
  "macros",
  "signal",
] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
toml = "0.9"
tracing = "^0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
url = "2.5.2"
uuid = { version = "1.4", features = ["v4"] }
ed25519-dalek = { version = "2.1", features = ["pkcs8", "pem"] }
