[package]
name = "rengine-api"
description = "types"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
rengine-types.workspace = true
rengine-core.workspace = true
rengine-utils.workspace = true

anyhow.workspace = true
axum.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tower-http = { version = "0.6.7", features = ["cors", "fs"] }
parking_lot.workspace = true

[dev-dependencies]
base64.workspace = true
