[package]
name = "binance-perp"
description = "Connector to Binance Perp"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
rengine-types.workspace = true
rengine-metrics.workspace = true
rengine-interfaces.workspace = true
rengine-utils.workspace = true
rengine-non-wasm-types.workspace = true
frunk_ws = { path = "../frunk_ws" }
frunk.workspace = true

alloy.workspace = true
async-trait.workspace = true
anyhow.workspace = true
chrono.workspace = true
const-hex = "1.14.1"
futures.workspace = true
hex.workspace = true
phf.workspace = true
reqwest.workspace = true
rmp-serde = "1.3.0"
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-tungstenite.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
uuid = { version = "1.4", features = ["v4"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
serde_urlencoded = "0.7.1"
smol_str.workspace = true
ed25519-dalek = { version = "2.1", features = ["pkcs8", "pem"] }
base64 = "0.21"

[dev-dependencies]
toml.workspace = true
tracing-subscriber.workspace = true
