[package]
name = "binance-spot"
description = "Connector to Binance Spot"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
rengine-types.workspace = true
rengine-metrics.workspace = true
rengine-interfaces.workspace = true
rengine-utils.workspace = true
rengine-non-wasm-types.workspace = true
frunk_ws = { path = "../frunk_ws" }
frunk = "0.4"

alloy.workspace = true
async-trait.workspace = true
anyhow.workspace = true
chrono.workspace = true
const-hex.workspace = true
futures.workspace = true
hex.workspace = true
phf.workspace = true
reqwest.workspace = true
rmp-serde = "1.3.0"
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-tungstenite.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
hmac = "0.12.1"
sha2 = "0.10.8"
uuid.workspace = true
tokio-stream.workspace = true
strum = { version = "0.26", features = ["derive"] }
serde_urlencoded.workspace = true
ed25519-dalek.workspace = true
base64.workspace = true

[dev-dependencies]
toml.workspace = true
tracing-subscriber.workspace = true
rust_decimal_macros.workspace = true
