[package]
name = "rengine-config"
description = "config"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
alloy.workspace = true
hyperliquid.workspace = true
binance-perp.workspace = true
binance-spot.workspace = true
rengine-types.workspace = true
rengine-utils.workspace = true

anyhow.workspace = true
serde.workspace = true
toml.workspace = true

[dev-dependencies]
alloy.workspace = true
