[package]
name = "rengine-db"
description = "types"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
rengine-config.workspace = true
rengine-metrics.workspace = true
rengine-types = { workspace = true, features = ["clickhouse"] }
rengine-interfaces.workspace = true

anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
clickhouse = { workspace = true, features = ["inserter"] }
duckdb.workspace = true
futures.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
testcontainers.workspace = true
rust_decimal_macros.workspace = true
tracing-subscriber.workspace = true
