[package]
name = "hyperliquid"
description = "Connector to Hyperliquid"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
rengine-types.workspace = true
rengine-metrics.workspace = true
rengine-interfaces.workspace = true
rengine-utils.workspace = true
rengine-non-wasm-types.workspace = true

alloy = { workspace = true, features = ["signers", "signer-local", "sol-types"] }
async-trait.workspace = true
anyhow.workspace = true
chrono.workspace = true
const-hex = "1.14.1"
futures.workspace = true
hex.workspace = true
phf.workspace = true
reqwest.workspace = true
rmp-serde = "1.3.0"
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-tungstenite.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
strum = { workspace = true, features = ["derive"] }

[dev-dependencies]
toml.workspace = true
tracing-subscriber.workspace = true
