[package]
name = "rengine-mcp"
description = "MCP server for rengine trading engine"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
rengine-types.workspace = true
rengine-core.workspace = true

rmcp.workspace = true

anyhow.workspace = true
axum.workspace = true
base64.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
parking_lot.workspace = true
