[package]
name = "rengine-metrics"
description = "utils"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
rengine-types = { workspace = true, features = ["clickhouse"] }

once_cell.workspace = true
chrono.workspace = true
strum.workspace = true
phf.workspace = true
scc.workspace = true
smol_str.workspace = true
