[package]
name = "rengine-non-wasm-types"
description = "types"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
rengine-types.workspace = true
tokio.workspace = true
tracing.workspace = true
rust_decimal.workspace = true
