[package]
name = "rengine-utils"
description = "utils"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
humantime.workspace = true
rust_decimal.workspace = true
serde.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
alloy.workspace = true
reqwest.workspace = true
rengine-metrics = { path = "../metrics" }
