[package]
name = "test-logs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
evm-logs-api = { path = "../../crates/evm_logs_api" }
evm-types = { path = "../../crates/evm_types" }
rengine-types = { path = "../../crates/types" }
borsh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
alloy = { workspace = true, default-features = false, features = ["sol-types"] }

rust_decimal.workspace = true
