[package]
name = "wasm-builder"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wasm-builder"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "signal"] }
tokio-util = "0.7"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
anyhow = "1"
